E2J/part4/t46.output
running e2j
compiling the Java generated code
My_e2j.java:34: error: variable x_bbbb is already defined in method main(String[])
int x_bbbb;
    ^
My_e2j.java:61: error: variable x_bbbb is already defined in method main(String[])
int x_bbbb;
    ^
2 errors
